todoyu core changelog

core 2.1.4 - not released yet
	* Changed: TodoyuFormElement::getStorageData() is final now and checks always for noStorage and disabled
	* Added: TodoyuCountry::getIsoNumCurrency()
	* Added: TodoyuFormElement::getStorageDataInternal() to override storageData properly
	* Added: TodoyuDatabase::quoteTablename() (currently alias of quoteFieldName()). Cleanup quoteFieldName()

core 2.1.3 - 2011-11-17
	* Bugfix: System URL was set wrong on windows systems
	* Bugfix: Cropping of tabs didn't work correctly in ie. Due to substr(negativeValue)
	* Bugfix: Checkbox had problem with default value
	* Bugfix: ReplyTo & sender of emails were automatically set to the system mail
	* Bugfix: Simplified textarea auto resize. Works now in all major up-to-date browsers
	* Bugfix: XML entities were encoded inside of dwoo tags which caused parse error in template engine (dwoo)
	* Bugfix: Hiding of notifications of the same type failed when more than 2 dots were in the identifier
	* Added: Auto-focus RTE of first form field (e.g. comment text)
	* Added: Cropping for database relation labels in form
	* Added TodoyuTime::time() to set null values to current time
	* Added TodoyuDateRange
	* Added TodoyuArray::createMap()
	* Added: action dispatcher error output contains now also action controller class name
	* Added: Wrappers for rename() and copy() in TodoyuFileManager
	* Added: TodoyuTime:: getYearEnd(), getYearStart()
	* Added: update() and updateField()
	* Added: Default link to documentation
	* Added: Comparison form validators (dateBefore, dateAfter, dateNotAfter, dateTimeNotBefore, dateTimeAfter, equals) can optionally compare against a value
	* Added: New parameter 'area' for asset file config. If merging is not enabled, you can define one or more areas (string or array) where to load the specific file (no config = all areas)
	* Added: Paste plugin for tinyMCE
	* Added: Description for records