@@ -333,7 +333,7 @@ class TodoyuFormValidator {
 	/**
 	 * Check whether the checked value (date) is before another date from within $config array
 	 *
-	 * @param	String				$value				Readable date format which works with strtotime()
+	 * @param	String				$value
 	 * @param	Array				$validatorConfig	Field config array
 	 * @param	TodoyuFormElement	$formElement
 	 * @param	Array				$formData
@@ -349,20 +349,56 @@ class TodoyuFormValidator {
 		if( $value == 0 && array_key_exists('allowEmpty', $validatorConfig) ) {
 			return true;
 		}
-
-			// Validate
-		if( array_key_exists('field', $validatorConfig) ) {
-			$compareFieldName	= $validatorConfig['field'];
-			$compareValue		= $formData[$compareFieldName];
-		} else {
-			$compareValue	=	intval($validatorConfig['value']);
-		}
+		
+			// Get compare value from referenced field or value
+		$compareValue	= self::getCompareValue($formElement, $validatorConfig);
 
 			// Convert dates to timestamps
-		$fieldDate			= intval($value);
-		$compareDate	= intval($compareValue);
+		$fieldDate	= intval($value);
+		$compareDate= intval($compareValue);
 
 		return $fieldDate < $compareDate;
+	}
+
+
+
+	/**
+	 * Get field value. Field name can be prefixed with 'parent:'.
+	 * Then it will look for the field in the parent form if it exists
+	 *
+	 * @param	TodoyuForm	$form
+	 * @param	String		$fieldName
+	 * @return	Mixed
+	 */
+	public static function lookupFieldValue(TodoyuForm $form, $fieldName) {
+		if( substr($fieldName, 0, 7) === 'parent:' && $form->hasParentForm() ) {
+			$fieldName	= substr($fieldName, 7);
+			$form		= $form->getParentForm();
+		}
+
+		return $form->getFieldValue($fieldName);
+	}
+
+
+
+	/**
+	 * Get compare value
+	 * Either referenced field or static value from configuration
+	 * Detect which configuration is set and lookup the value
+	 *
+	 * @param	TodoyuFormElement	$formElement
+	 * @param	Array				$validatorConfig
+	 * @return	Mixed
+	 */
+	public static function getCompareValue(TodoyuFormElement $formElement, array $validatorConfig) {
+			// Get compare value from referenced field
+		if( isset($validatorConfig['field']) ) {
+			$compareValue	= self::lookupFieldValue($formElement->getForm(), $validatorConfig['field']);
+		} else {
+			$compareValue	= $validatorConfig['value'];
+		}
+
+		return $compareValue;
 	}
 
 
@@ -378,7 +414,6 @@ class TodoyuFormValidator {
 	 * @return	Boolean
 	 */
 	public static function dateNotBefore($value, array $validatorConfig, TodoyuFormElement $formElement, array $formData) {
-
 			// Check for allowed exceptions
 		$allow	= self::checkAllow($validatorConfig, $formData);
 		if( $allow === true ) {
@@ -417,22 +452,15 @@ class TodoyuFormValidator {
 			return true;
 		}
 
-			// Validate
-		if( isset($validatorConfig['field']) ) {
-			$compareFieldName	= $validatorConfig['field'];
-			$compareValue		= $formData[$compareFieldName];
-		} elseif( isset($validatorConfig['value']) ) {
-			$compareValue		= $validatorConfig['value'];
-		} else {
-			return true; // No compare value = ok
-		}
+			// Get compare value from referenced field or value
+		$compareValue	= self::getCompareValue($formElement, $validatorConfig);
 
 			// Convert dates to timestamps
 		$fieldDate	= intval($value);
 		$compareDate= intval($compareValue);
 
 		if( $compareDate === 0 ) {
-			return true;
+			return false;
 		}
 
 		return $fieldDate > $compareDate;
@@ -477,18 +505,11 @@ class TodoyuFormValidator {
 			return true;
 		}
 
-			// Validate
-		if( array_key_exists('field', $validatorConfig) ) {
-			$secondFieldName= $validatorConfig['field'];
-			$secondValue	= $formData[$secondFieldName];
-		} else {
-			$secondValue	= intval($validatorConfig['value']);
-		}
+		$compareValue	= self::getCompareValue($formElement, $validatorConfig);
+		$fieldDate		= intval($value);
+		$compareDate	= intval($compareValue);
 
-		$fieldDate	= intval($value);
-		$secondDate	= intval($secondValue);
-
-		return $fieldDate < $secondDate || $fieldDate === 0 || $secondDate === 0;
+		return $fieldDate < $compareDate || $fieldDate === 0 || $compareDate === 0;
 	}
 
 
@@ -508,18 +529,11 @@ class TodoyuFormValidator {
 			return true;
 		}
 
-			// Validate
-		if( array_key_exists('field', $validatorConfig) ) {
-			$secondFieldName= $validatorConfig['field'];
-			$secondValue	= $formData[$secondFieldName];
-		} else {
-			$secondValue	= intval($formData['value']);
-		}
+		$compareValue	= self::getCompareValue($formElement, $validatorConfig);
+		$fieldDate		= intval($value);
+		$compareDate	= intval($compareValue);
 
-		$fieldDate			= intval($value);
-		$secondDate	= intval($secondValue);
-
-		if( $fieldDate === 0 || $secondDate === 0) {
+		if( $fieldDate === 0 || $compareDate === 0) {
 			return true;
 		}
 
@@ -543,18 +557,11 @@ class TodoyuFormValidator {
 			return true;
 		}
 
-			// Validate
-		if( array_key_exists('field', $validatorConfig) ) {
-			$secondFieldName= $validatorConfig['field'];
-			$secondValue	= $formData[$secondFieldName];
-		} else {
-			$secondValue	= $validatorConfig['value'];
-		}
-
+		$compareValue	= self::getCompareValue($formElement, $validatorConfig);
 		$fieldDate		= intval($value);
-		$secondDate= intval($secondValue);
+		$compareDate	= intval($compareValue);
 
-		return $fieldDate > $secondDate;
+		return $fieldDate > $compareDate;
 	}
 
 
@@ -649,17 +656,10 @@ class TodoyuFormValidator {
 			return true;
 		}
 
-			// Validate
-		if( array_key_exists('field', $validatorConfig) ) {
-			$secondFieldName= $validatorConfig['field'];
-			$secondValue	= $formData[$secondFieldName];
-		} else {
-			$secondValue	= $validatorConfig['value'];
-		}
+		$compareValue	= self::getCompareValue($formElement, $validatorConfig);
+		$allowEmpty		= isset($validatorConfig['allowEmpty']);
 
-		$allowEmpty	= isset($validatorConfig['allowEmpty']);
-
-		$equal		= $secondValue === $value;
+		$equal		= $compareValue === $value;
 		$notEmpty	= $allowEmpty ? true : $value !== '';
 
 		return $equal && $notEmpty;
